# login_project

backend_fastapi/: .env  pyproject.toml
backend_fastapi/app/: main.py
backend_fastapi/app/core/: config.py  security.py
backend_fastapi/app/db/: base.py  session.py
backend_fastapi/app/models/: user.py
backend_fastapi/app/routers/: auth.py  user.py
backend_fastapi/app/schemas/: token.py  user.py
backend_fastapi/app/services/: user_service.py
backend_typescript/: package-lock.json  package.json
backend_typescript/prisma/: schema.prisma
backend_typescript/src/: middleware.ts
backend_typescript/src/app/api/token/: route.ts
backend_typescript/src/app/api/users/: route.ts
backend_typescript/src/lib/: prisma.ts  security.ts
backend_typescript/src/services/: userService.ts
backend_typescript/src/types/: user.ts
frontend_fastapi/: .env  package-lock.json  package.json  vite.config.js
frontend_fastapi/src/: App.jsx  main.jsx
frontend_fastapi/src/pages/: HomePage.jsx  LoginPage.jsx  SignUpPage.jsx
frontend_fastapi/src/services/: api.js
frontend_fastapi/src/store/: authStore.js
frontend_typescript/: .env  package-lock.json  package.json
frontend_typescript/src/: index.css
frontend_typescript/src/components/: AppLayout.jsx  ConnectionTest.jsx
frontend_typescript/src/services/: api.js
